...
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/item_text_action"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_bg"
            android:gravity="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="#80E6E4EA" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0"
            android:indeterminateDrawable="@drawable/progress_bar" />

...
